Aufloesung_ermitteln/Xrandr.pas

unit Xrandr;

interface

uses x,xlib,
  xrender,
  randr;

{
  Automatically converted by H2Pas 1.0.0 from Xrandr.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    Xrandr.h
}

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{
 * Copyright © 2000 Compaq Computer Corporation, Inc.
 * Copyright © 2002 Hewlett-Packard Company, Inc.
 * Copyright © 2006 Intel Corporation
 * Copyright © 2008 Red Hat, Inc.
 *
 * Permission to use, copy, modify, distribute, and sell this software and its
 * documentation for any purpose is hereby granted without fee, provided that
 * the above copyright notice appear in all copies and that both that copyright
 * notice and this permission notice appear in supporting documentation, and
 * that the name of the copyright holders not be used in advertising or
 * publicity pertaining to distribution of the software without specific,
 * written prior permission.  The copyright holders make no representations
 * about the suitability of this software for any purpose.  It is provided "as
 * is" without express or implied warranty.
 *
 * THE COPYRIGHT HOLDERS DISCLAIM ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
 * INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN NO
 * EVENT SHALL THE COPYRIGHT HOLDERS BE LIABLE FOR ANY SPECIAL, INDIRECT OR
 * CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE,
 * DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER
 * TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE
 * OF THIS SOFTWARE.
 *
 * Author:  Jim Gettys, HP Labs, Hewlett-Packard, Inc.
 *	    Keith Packard, Intel Corporation
  }
//{$include <X11/extensions/randr.h>}
//{$include <X11/extensions/Xrender.h>}
//{$include <X11/Xfuncproto.h>}
{_XFUNCPROTOBEGIN }
type
  PRROutput = ^TRROutput;
  TRROutput = TXID;

  PRRCrtc = ^TRRCrtc;
  TRRCrtc = TXID;

  PRRMode = ^TRRMode;
  TRRMode = TXID;

  PRRProvider = ^TRRProvider;
  TRRProvider = TXID;

  PXRRScreenSize = ^TXRRScreenSize;
  TXRRScreenSize = record
      width : longint;
      height : longint;
      mwidth : longint;
      mheight : longint;
    end;
{
 *  Events.
  }
{ event base  }
{ # of last request processed by server  }
{ true if this came from a SendEvent request  }
{ Display the event was read from  }
{ window which selected for this event  }
{ Root window for changed screen  }
{ when the screen change occurred  }
{ when the last configuration change  }

  PXRRScreenChangeNotifyEvent = ^TXRRScreenChangeNotifyEvent;
  TXRRScreenChangeNotifyEvent = record
      _type : longint;
      serial : dword;
      send_event : TBool;
      display : PDisplay;
      window : TWindow;
      root : TWindow;
      timestamp : TTime;
      config_timestamp : TTime;
      size_index : TSizeID;
      subpixel_order : TSubpixelOrder;
      rotation : TRotation;
      width : longint;
      height : longint;
      mwidth : longint;
      mheight : longint;
    end;
{ event base  }
{ # of last request processed by server  }
{ true if this came from a SendEvent request  }
{ Display the event was read from  }
{ window which selected for this event  }
{ RRNotify_ subtype  }

  PXRRNotifyEvent = ^TXRRNotifyEvent;
  TXRRNotifyEvent = record
      _type : longint;
      serial : dword;
      send_event : TBool;
      display : PDisplay;
      window : TWindow;
      subtype : longint;
    end;
{ event base  }
{ # of last request processed by server  }
{ true if this came from a SendEvent request  }
{ Display the event was read from  }
{ window which selected for this event  }
{ RRNotify_OutputChange  }
{ affected output  }
{ current crtc (or None)  }
{ current mode (or None)  }
{ current rotation of associated crtc  }
{ current connection status  }

  PXRROutputChangeNotifyEvent = ^TXRROutputChangeNotifyEvent;
  TXRROutputChangeNotifyEvent = record
      _type : longint;
      serial : dword;
      send_event : TBool;
      display : PDisplay;
      window : TWindow;
      subtype : longint;
      output : TRROutput;
      crtc : TRRCrtc;
      mode : TRRMode;
      rotation : TRotation;
      connection : TConnection;
      subpixel_order : TSubpixelOrder;
    end;
{ event base  }
{ # of last request processed by server  }
{ true if this came from a SendEvent request  }
{ Display the event was read from  }
{ window which selected for this event  }
{ RRNotify_CrtcChange  }
{ current crtc (or None)  }
{ current mode (or None)  }
{ current rotation of associated crtc  }
{ position  }
{ size  }

  PXRRCrtcChangeNotifyEvent = ^TXRRCrtcChangeNotifyEvent;
  TXRRCrtcChangeNotifyEvent = record
      _type : longint;
      serial : dword;
      send_event : TBool;
      display : PDisplay;
      window : TWindow;
      subtype : longint;
      crtc : TRRCrtc;
      mode : TRRMode;
      rotation : TRotation;
      x : longint;
      y : longint;
      width : dword;
      height : dword;
    end;
{ event base  }
{ # of last request processed by server  }
{ true if this came from a SendEvent request  }
{ Display the event was read from  }
{ window which selected for this event  }
{ RRNotify_OutputProperty  }
{ related output  }
{ changed property  }
{ time of change  }
{ NewValue, Deleted  }

  PXRROutputPropertyNotifyEvent = ^TXRROutputPropertyNotifyEvent;
  TXRROutputPropertyNotifyEvent = record
      _type : longint;
      serial : dword;
      send_event : TBool;
      display : PDisplay;
      window : TWindow;
      subtype : longint;
      output : TRROutput;
      _property : TAtom;
      timestamp : TTime;
      state : longint;
    end;
{ event base  }
{ # of last request processed by server  }
{ true if this came from a SendEvent request  }
{ Display the event was read from  }
{ window which selected for this event  }
{ RRNotify_ProviderChange  }
{ current provider (or None)  }
{ time of change  }

  PXRRProviderChangeNotifyEvent = ^TXRRProviderChangeNotifyEvent;
  TXRRProviderChangeNotifyEvent = record
      _type : longint;
      serial : dword;
      send_event : TBool;
      display : PDisplay;
      window : TWindow;
      subtype : longint;
      provider : TRRProvider;
      timestamp : TTime;
      current_role : dword;
    end;
{ event base  }
{ # of last request processed by server  }
{ true if this came from a SendEvent request  }
{ Display the event was read from  }
{ window which selected for this event  }
{ RRNotify_ProviderProperty  }
{ related provider  }
{ changed property  }
{ time of change  }
{ NewValue, Deleted  }

  PXRRProviderPropertyNotifyEvent = ^TXRRProviderPropertyNotifyEvent;
  TXRRProviderPropertyNotifyEvent = record
      _type : longint;
      serial : dword;
      send_event : TBool;
      display : PDisplay;
      window : TWindow;
      subtype : longint;
      provider : TRRProvider;
      _property : TAtom;
      timestamp : TTime;
      state : longint;
    end;
{ event base  }
{ # of last request processed by server  }
{ true if this came from a SendEvent request  }
{ Display the event was read from  }
{ window which selected for this event  }
{ RRNotify_ResourceChange  }
{ time of change  }

  PXRRResourceChangeNotifyEvent = ^TXRRResourceChangeNotifyEvent;
  TXRRResourceChangeNotifyEvent = record
      _type : longint;
      serial : dword;
      send_event : TBool;
      display : PDisplay;
      window : TWindow;
      subtype : longint;
      timestamp : TTime;
    end;
{ internal representation is private to the library  }


// Eigenes:
type PXRRScreenConfiguration=^TXRRScreenConfiguration;
  TXRRScreenConfiguration=Pointer;


function XRRQueryExtension(dpy:PDisplay; event_base_return:Plongint; error_base_return:Plongint):TBool;cdecl;external;
function XRRQueryVersion(dpy:PDisplay; major_version_return:Plongint; minor_version_return:Plongint):TStatus;cdecl;external;
function XRRGetScreenInfo(dpy:PDisplay; window:TWindow):PXRRScreenConfiguration;cdecl;external;
procedure XRRFreeScreenConfigInfo(config:PXRRScreenConfiguration);cdecl;external;
{
 * Note that screen configuration changes are only permitted if the client can
 * prove it has up to date configuration information.  We are trying to
 * insist that it become possible for screens to change dynamically, so
 * we want to ensure the client knows what it is talking about when requesting
 * changes.
  }
function XRRSetScreenConfig(dpy:PDisplay; config:PXRRScreenConfiguration; draw:TDrawable; size_index:longint; rotation:TRotation; 
           timestamp:TTime):TStatus;cdecl;external;
{ added in v1.1, sorry for the lame name  }
function XRRSetScreenConfigAndRate(dpy:PDisplay; config:PXRRScreenConfiguration; draw:TDrawable; size_index:longint; rotation:TRotation; 
           rate:smallint; timestamp:TTime):TStatus;cdecl;external;
function XRRConfigRotations(config:PXRRScreenConfiguration; current_rotation:PRotation):TRotation;cdecl;external;
function XRRConfigTimes(config:PXRRScreenConfiguration; config_timestamp:PTime):TTime;cdecl;external;
function XRRConfigSizes(config:PXRRScreenConfiguration; nsizes:Plongint):PXRRScreenSize;cdecl;external;
function XRRConfigRates(config:PXRRScreenConfiguration; sizeID:longint; nrates:Plongint):Psmallint;cdecl;external;
function XRRConfigCurrentConfiguration(config:PXRRScreenConfiguration; rotation:PRotation):TSizeID;cdecl;external;
function XRRConfigCurrentRate(config:PXRRScreenConfiguration):smallint;cdecl;external;
function XRRRootToScreen(dpy:PDisplay; root:TWindow):longint;cdecl;external;
{
 * returns the screen configuration for the specified screen; does a lazy
 * evalution to delay getting the information, and caches the result.
 * These routines should be used in preference to XRRGetScreenInfo
 * to avoid unneeded round trips to the X server.  These are new
 * in protocol version 0.1.
  }
procedure XRRSelectInput(dpy:PDisplay; window:TWindow; mask:longint);cdecl;external;
{
 * the following are always safe to call, even if RandR is not implemented
 * on a screen
  }
function XRRRotations(dpy:PDisplay; screen:longint; current_rotation:PRotation):TRotation;cdecl;external;
function XRRSizes(dpy:PDisplay; screen:longint; nsizes:Plongint):PXRRScreenSize;cdecl;external;
function XRRRates(dpy:PDisplay; screen:longint; sizeID:longint; nrates:Plongint):Psmallint;cdecl;external;
function XRRTimes(dpy:PDisplay; screen:longint; config_timestamp:PTime):TTime;cdecl;external;
{ Version 1.2 additions  }
{ despite returning a Status, this returns 1 for success  }
function XRRGetScreenSizeRange(dpy:PDisplay; window:TWindow; minWidth:Plongint; minHeight:Plongint; maxWidth:Plongint; 
           maxHeight:Plongint):TStatus;cdecl;external;
procedure XRRSetScreenSize(dpy:PDisplay; window:TWindow; width:longint; height:longint; mmWidth:longint; 
            mmHeight:longint);cdecl;external;
type
  PXRRModeFlags = ^TXRRModeFlags;
  TXRRModeFlags = dword;

  PXRRModeInfo = ^TXRRModeInfo;
  TXRRModeInfo = record
      id : TRRMode;
      width : dword;
      height : dword;
      dotClock : dword;
      hSyncStart : dword;
      hSyncEnd : dword;
      hTotal : dword;
      hSkew : dword;
      vSyncStart : dword;
      vSyncEnd : dword;
      vTotal : dword;
      name : Pchar;
      nameLength : dword;
      modeFlags : TXRRModeFlags;
    end;

  PXRRScreenResources = ^TXRRScreenResources;
  TXRRScreenResources = record
      timestamp : TTime;
      configTimestamp : TTime;
      ncrtc : longint;
      crtcs : PRRCrtc;
      noutput : longint;
      outputs : PRROutput;
      nmode : longint;
      modes : PXRRModeInfo;
    end;
